--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 header {
     background: #0c57ab 100%;
-	text-color: white;
+	color: white;
     text-align: center;
     padding: 3rem 1rem;
     margin-bottom: 2rem;
