--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ main {
 }
 
 .card-header {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    color: white;
+    background: #0c57ab 100%;
+	color: white;
     padding: 1.5rem;
     text-align: center;
 }
